--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
 /* Style sheet */
+body {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+.main-container,
+.grid-container {
+    display: flex;
+}
+.main-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.grid-container {
+    border: 1px black solid;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+.grid-container .grid {
+    background-color:white;
+    border:grey 1px dotted;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis:10px;
+    max-height:10px;
+} 
+button,
+.resize {
+    padding: 10px;
+    background-color:pink;
+    border: none;
+    box-shadow: rgb(75, 21, 30) 2px 2px 1px;
+    
+}
